--- a/movie.html
+++ b/movie.html
@@ -6,18 +6,18 @@
     <title>movie api</title>
   <link rel="stylesheet" href="master.css">
   </head>
-  <body>
+  <body >
 <header>
   <h1>Sizwe chat app</h1>
 </header>
 
 <div class="chats">
 <ul id="messages"><ul >
-  <form id="form" action="">
-    <input type="text" id="input"><button>send</button>
-  </form>
-</div>
 
+</div>
+<form id="form" action="">
+  <input type="text" id="input"><button id="button">send</button>
+</form>
 
 
 
