--- a/movie.html
+++ b/movie.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>movie api</title>
+    <title>chat bot</title>
  <link rel="stylesheet" href="master.css">
   </head>
-  <body >
-<header>
+  <body  >
+<header >
    <h1>Sizwe chat app</h1>
 </header>
 <div class="userName">
@@ -16,8 +16,9 @@
   <button type="button" id="namebutton" >enter</button>
 </div>
 
-<div class="chats">
+<div class="chats" onClick="save()">
   <h3 id="status"></h3>
+  <ul id="saved"></ul>
 <ul id="messages"><ul >
 </div>
 
