--- a/movie.html
+++ b/movie.html
@@ -10,15 +10,15 @@
 <header >
    <h1>Sizwe chat app</h1>
 </header>
-<div class="userName">
-  <label>your name</label>
+<div class="userName" id="userId">
+  <label>your name ></label>
   <input type="text" id="name">
   <button type="button" id="namebutton" >enter</button>
 </div>
 
 <div class="chats" onClick="save()" id="chats">
   <h3 id="status"></h3>
-  <ul id="saved"></ul>
+  <h4 id="time"></h4>
 <ul id="messages"><ul >
 </div>
 
