--- a/movie.html
+++ b/movie.html
@@ -5,10 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>chat bot</title>
  <link rel="stylesheet" href="master.css">
+ <link rel="icon" type="image/jpeg" href="FB_IMG_16521914196812297.jpg">
   </head>
   <body>
 <header >
    <h1>Sizwe chat app</h1>
+
 </header>
 <div class="userName" id="userId">
   <label>your name ></label>
@@ -16,7 +18,8 @@
   <button type="button" id="namebutton" >enter</button>
 </div>
 
-<div class="chats" onClick="save()" id="chats">
+<div class="chats" id="chats">
+  <button type="button" id="theme">change theme</button>
   <h3 id="status"></h3>
   <h4 id="time"></h4>
 <ul id="messages"><ul >
