--- a/movie.html
+++ b/movie.html
@@ -7,11 +7,11 @@
  <link rel="stylesheet" href="master.css">
  <link rel="icon" type="image/jpeg" href="FB_IMG_16521914196812297.jpg">
   </head>
-  <body>
-<header >
+  <body id="body">
+<header id="header" >
    <h1>Sizwe chat app</h1>
-
 </header>
+
 <div class="userName" id="userId">
   <label>your name ></label>
   <input type="text" id="name">
