--- a/movie.html
+++ b/movie.html
@@ -5,28 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>chat bot</title>
  <link rel="stylesheet" href="master.css">
+ <link rel="stylesheet" href="all.min.css">
  <link rel="icon" type="image/jpeg" href="FB_IMG_16521914196812297.jpg">
   </head>
   <body id="body">
 <header id="header" >
-   <h1>Sizwe chat app</h1>
+   <h1>Chat-Bot</h1> <i class="fas fa-comment-dots fa-3x"></i>
 </header>
 
 <div class="userName" id="userId">
-  <label>your name ></label>
+  <label>Name <i class="fas fa-user" ></i> </label>
   <input type="text" id="name">
   <button type="button" id="namebutton" >enter</button>
 </div>
 
 <div class="chats" id="chats">
   <button type="button" id="theme">change theme</button>
-  <h3 id="status"></h3>
+  <h3 id="status"> <i class="fas-fa-user"></i></h3>
   <h4 id="time"></h4>
 <ul id="messages"><ul >
 </div>
 
 <form id="form" action="save" method="post">
-  <input type="text" id="input" name="messages"><button type="submit" id="button">send</button>
+  <input type="text" id="input" name="messages"><button type="submit" id="button">
+    <i class="fas fa-paper-plane fa-2x" ></i> </button>
 </form>
 
 
